<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/title_activity_main"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/imageView1"
        android:layout_alignRight="@id/imageView1"
        android:layout_below="@+id/imageView1"
        android:background="@color/steel_blue"
        android:gravity="center_horizontal"
        android:text="@string/loan_summary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_alignRight="@id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="2dp"
        android:textSize="7sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_alignRight="@id/textView1"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="2dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="6sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="goDataEntry"
        android:text="@string/go_data_entry" />
</RelativeLayout>